# ElytAmbience

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SOUNDS_LICENSING.md  elytambiance.desktop  meson.build  meson_linux.build
.github/workflows/: linux.yml  release.yml
data/: elytambiance.gresource.xml  org.elytlabs.elytambiance.gschema.xml
elytambiance/: __init__.py  main.py  mpris.py  player.py  window.py
packaging/: +MANIFEST  build-deb.sh  build-rpm.sh
packaging/debian/: control.in
packaging/rpm/: elytambiance.spec.in
port/: Makefile  pkg-descr  pkg-plist
